# Centre-Registry

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  README.md  kcentres.csv  kcentres.html  kcentres.ods  kcentres_curated.csv  pyproject.toml
.github/: release_wheel.yml
.github/workflows/: app_test.yml  release_wheel.yml
Centre-Registry-config/: dump_sqlite.py  manage.py  pyproject.toml  setup.cfg  setup.py
Centre-Registry-config/centre_registry_project/: debug_staging_settings.py  settings.py  urls.py  wsgi.py
Centre-Registry-config/commands/: init_shadow_tables.py
Centre-Registry-config_/: MANIFEST.in  setup.py
Centre-Registry-config_/centre_registry_project/: urls.py
alpha-KCentre/: .env  docker-compose.yml
alpha-KCentre/db/: create.sql
arrayfield/js/: arrayfield.js
centre-registry-app/: MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements_test.txt  setup.cfg  setup.py
centre-registry-app/centre_registry/: __init__.py  actions.py  admin.py  apps.py  context_processors.py  fields.py  forms.py  models.py  serializers.py  set_sauce_status.py  test_api.py  test_migrations.py  test_ui.py  utils.py  views_api.py  views_ui.py  widgets.py
centre-registry-app/centre_registry/data/: CenterProfile.xsd  centre_type.json  centres.json  consortium.json  contact.json  fcsendpoint.json  metadataformat.json  oaipmhendpoint.json  samlidentityfederation.json  samlserviceprovider.json  urlreference.json
centre-registry-app/centre_registry/fixtures/: test_data.json
centre-registry-app/centre_registry/management/commands/: clean_shadow_tables.py  populate_shadow_tables.py  update_certification_status.py
centre-registry-app/centre_registry/migrations/: 0001_initial.py  0002_auto_20141128_1731.py  0002_auto_20191216_1202.py  0003_auto_20150223_1840.py  0003_auto_20191218_1542.py  0004_auto_20150422_1906.py  0004_oaipmhendpointset_20191218_1532.py  0005_auto_20150422_1913.py  0005_auto_20191218_1543.py  0005_populate_oaipmhendpointset.py  0005_populate_oaipmhendpointset_20191218_1657.py  0006_auto_20150422_1920.py  0006_auto_20200103_1517.py  0007_auto_20150422_1925.py  0008_auto_20150423_1520.py  0009_auto_20150423_1526.py  0010_auto_20150424_1324.py  0011_auto_20150424_1336.py  0012_auto_20150424_1546.py  0013_auto_20150424_1553.py  0014_remove_contact_edupersonprincipalname.py  0015_contact_edupersonprincipalname.py  0016_auto_20150428_1914.py  0017_auto_20150429_1156.py  0018_auto_20150429_1632.py  0019_remove_samlserviceprovider_information_url.py  0020_auto_20170118_1304.py  0021_auto_20191127_1258.py  0021_auto_20191202_1403.py  0022_auto_20191127_1328.py  0022_auto_20191202_1503.py  0023_auto_20191205_1342.py  0023_auto_20191216_1202.py  0024_auto_20191218_1542.py  0024_auto_20200122_1752.py  0024_auto_20200122_1844.py  0025_auto_20200122_1858.py  0025_oaipmhendpointset_20191218_1532.py  0026_auto_20200306_1701.py  0026_oaipmhendpoint_uri_list.py  (+77 more)
centre-registry-app/centre_registry/static/: 0040_centre_type_certification_status_new_and_more.py  0041_populate_TypeCertificationStatus.py
centre-registry-app/centre_registry/static/admin/js/: SelectBox.js  actions.js  core.js  prepopulate.js
centre-registry-app/centre_registry/static/centre-registry-app/arrayfield/js/: arrayfield.js
centre-registry-app/centre_registry/static/centre-registry-app/datatables/media/css/: jquery.dataTables.min.css
centre-registry-app/centre_registry/static/centre-registry-app/datatables/media/js/: datatables.min.js  jquery.dataTables.min.js
centre-registry-app/centre_registry/static/centre-registry-app/style/: _+DataTables.scss.css
centre-registry-app/centre_registry/static/debug_toolbar/css/: toolbar.css
centre-registry-app/centre_registry/static/debug_toolbar/js/: toolbar.js  toolbar.profiling.js  toolbar.sql.js  toolbar.template.js  toolbar.timer.js
centre-registry-app/centre_registry/static/grappelli/jquery/i18n/: ui.datepicker-de.js  ui.datepicker-fr.js
centre-registry-app/centre_registry/static/grappelli/jquery/ui/css/custom-theme/: jquery-ui-1.10.3.custom.min.css
centre-registry-app/centre_registry/static/grappelli/js/: grappelli.js  grappelli.min.js  jquery.grp_autocomplete_fk.js  jquery.grp_autocomplete_generic.js  jquery.grp_autocomplete_m2m.js  jquery.grp_inline.js  jquery.grp_related_fk.js  jquery.grp_related_generic.js  jquery.grp_related_m2m.js  jquery.grp_timepicker.js
centre-registry-app/centre_registry/static/grappelli/tinymce/jscripts/tiny_mce/: tiny_mce_src.js
centre-registry-app/centre_registry/templates/: robots.txt
centre-registry-app/centre_registry/templates/API/: all_centres.xml  centre.xml  centres_map.kml
centre-registry-app/centre_registry/templates/UI/: _.html  _about.html  _all_centres.html  _all_kcentres.html  _centre.html  _centres_contacts.html  _consortia.html  _contact.html  _contacting.html  _fcs.html  _kcentre.html  _kcentre_edit_form.html  _map.html  _oai_pmh.html  _spf.html
centre-registry-app/centre_registry/templates/admin/: _kcentre_moderation.html
centre-registry-app/centre_registry/templates/forms/: _edit_form_snippet.html
centre-registry-app/centre_registry/templates/widgets/: _arrayfield_widget.html
centre-registry-app/centre_registry/templatetags/: utils.py
centre-registry-config/: dump_sqlite.py  setup.cfg  setup.py
centre-registry-config/centre_registry_project/: debug_staging_settings.py  settings.py  urls.py
old_k_centre_migration/: 0034_populate_organisation.py
scripts/: start-sauce-tunnel.sh  stop-sauce-tunnel.sh
