[tool.poetry]
name = "clarin_centre_registry"
description = "CLARIN Centre Registry Django project configuration"
version = "0.0.0dev"
license = "../LICENSE.txt"
authors = [
    "Beatriz Sanchez Bribian",
    "Michał Gawor <michal@clarin.eu>",
    "Sander Maijers",
    "André Moreira<andre@clarin.eu>",
]
maintainers = [
    "Michał Gawor <michal@clarin.eu>",
    "Andre Moreira <andre@clarin.eu>",
    "<centre-registry@clarin.eu>"
]
packages = [
  { include = "centre_registry_project", from = "Centre-Registry-config" },
  { include = "centre_registry", from = "centre-registry-app" }, 
]

[tool.poetry.urls]
changelog = "https://github.com/clarin-eric/Centre-Registry/blob/master/LICENSE.txt"
documentation = "https://github.com/clarin-eric/Centre-Registry/"
homepage = "https://centres.clarin.eu/"
repository = "https://github.com/clarin-eric/Centre-Registry/"

[tool.poetry.dependencies]
python = '>=3.11.*,<4.0'
Django = '4.2.*, <5.0.0'
django-debug-toolbar = '4.4.6'
django-simple-history = '3.7.0'
djangorestframework = '3.15.2'

[tool.poetry.group.test.dependencies]
lxml = '5.3.0'
selenium = '4.27.1'
jsonschema = '4.23.0'
django-test-migrations = '1.4.0'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- else -%}
        {{ serialize_pep440(base, stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
