[tool.poetry]
name = "centre_registry_app"
description = "CLARIN Centre Registry, a Django application. "
version = "3.0.1"
license = "../LICENSE.txt"
authors = [
    "Beatriz Sanchez Bribian",
    "Michał Gawor <michal@clarin.eu>",
    "Sander Maijers",
    "André Moreira<andre@clarin.eu>",
]
maintainers = [
    "Michał Gawor <michal@clarin.eu>",
    "Andre Moreira <andre@clarin.eu>",
    "<centre-registry@clarin.eu>"
]
packages = [
    { include = "centre_registry" },
]

[tool.poetry.urls]
changelog = "https://github.com/clarin-eric/Centre-Registry/blob/master/LICENSE.txt"
documentation = "https://github.com/clarin-eric/Centre-Registry/"
homepage = "https://centres.clarin.eu/"
repository = "https://github.com/clarin-eric/Centre-Registry/"

[tool.poetry.dependencies]
Django = '4.2.11'
django-debug-toolbar = '4.3.0'
djangorestframework = '3.6.11'
django-test-migrations = '1.3.0'
jsonschema = '4.21.1'
lxml = '5.2.1'
python = '>=3.11.*,<4.0'
selenium = '4.19.0'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
